# odrl-renderer

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: main.rs  openapi.rs  template.rs  validate.rs
templates/: buildingblocks.json  template.typ
templates/cc/: by-nc-nd.typ  by-nc-sa.typ  by-nc.typ  by-nd.typ  by-sa.typ  by.typ  zero.typ
