[package]
name = "odrl-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
utoipa = { version = "5.2.0", features = [
    "chrono",
    "axum_extras",
    "ulid",
    "url",
] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
axum = "0.7.7"
tokio = { version = "1.41.1", features = ["full"] }
typst = { git = "https://github.com/NiklasEi/typst.git", branch = "file-embedding" }
derive_typst_intoval = "0.3.0"
typst-pdf = { git = "https://github.com/NiklasEi/typst.git", branch = "file-embedding" }
typst-as-lib = { git = "https://github.com/arunaengine/typst-as-lib.git" }
anyhow = "1.0.94"
utoipa-axum = "0.1.2"
serde = { version = "1.0.215", features = ["derive"] }
odrl = { git = "https://github.com/arunaengine/dspace-rs.git", branch = "aruna_connector" }
serde_json = "1.0.133"
junit-report = "0.8.3"
